sdk_tests/tests/pbc_contract_codegen/fail/zk/arg_instead_of_zk_state_zk_on_secret_input.stderr
error[E0308]: mismatched types
  --> tests/pbc_contract_codegen/fail/zk/arg_instead_of_zk_state_zk_on_secret_input.rs:18:1
   |
18 | #[zk_on_secret_input(shortname = 0x04)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected `ZkState<_>`, found `u32`
   | expected due to this
   |
   = note: expected struct `ZkState<_>`
                found type `u32`
   = note: this error originates in the attribute macro `zk_on_secret_input` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/pbc_contract_codegen/fail/zk/arg_instead_of_zk_state_zk_on_secret_input.rs:18:1
   |
18 | #[zk_on_secret_input(shortname = 0x04)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `ZkState<_>`
19 | fn do_zk_on_secret_input(
   |    --------------------- arguments to this function are incorrect
   |
   = note: expected type `u32`
            found struct `ZkState<_>`
note: function defined here
  --> tests/pbc_contract_codegen/fail/zk/arg_instead_of_zk_state_zk_on_secret_input.rs:19:4
   |
19 | fn do_zk_on_secret_input(
   |    ^^^^^^^^^^^^^^^^^^^^^
...
22 |     arg1: u32,
   |     ---------
   = note: this error originates in the attribute macro `zk_on_secret_input` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0560]: struct `pbc_contract_common::zk::ZkInputDef<_, _>` has no field named `expected_bit_lengths`
  --> tests/pbc_contract_codegen/fail/zk/arg_instead_of_zk_state_zk_on_secret_input.rs:26:9
   |
26 |         expected_bit_lengths: vec![10],
   |         ^^^^^^^^^^^^^^^^^^^^ `pbc_contract_common::zk::ZkInputDef<_, _>` does not have this field
   |
   = note: all struct fields are already assigned
